work page changed

--- a/files for admin/CMS Pages/works.phtml
+++ b/files for admin/CMS Pages/works.phtml
@@ -17,7 +17,7 @@
             e-commerce stores for some of the largest organisations in the world.
         </h2>
 
-        <a class="work-page__row" href="https://www.vodafone.ua/shop/" target="_blank">
+        <a class="work-page__row" href="/work/vodafone" target="_self">
             <div class="row__img work-page__image">
                 <img loading="eager" src="{{media url='wysiwyg/work/vodafone_banner.png'}}" alt="Vodafone online store development" />
             </div>
@@ -49,19 +49,18 @@
             </div>
         </a>
 
-        <!-- Dr.Berg -->
-        <a class="work-page__dual-bottom" href="https://shop.drberg.com/" target="_blank">
+        <!-- Rowenta -->
+        <a class="work-page__dual-bottom" href="/work/rowenta" target="_blank">
             <div class="dual-bottom__img work-page__image">
-                <img loading="lazy" src="{{media url='wysiwyg/work/dr_berg_banner.png'}}" alt="Dr Berg ecommerce development" />
+                <img loading="lazy" src="{{media url='wysiwyg/work/rowenta_banner.png'}}" alt="Rowenta online store development" />
             </div>
             <div class="work-page__info">
                 <h4 class="_h4">
-                    Dr.Berg
+                    Rowenta
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
                 <h5 class="h5">
-                    The online store of Dr. Eric Berg, who is a famous chiropractor and health educator, an expert in Healthy
-                    Keto® and intermittent fasting.
+                    Rowenta is a German manufacturer of small household appliances, founded in 1909.
                 </h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
@@ -69,7 +68,7 @@
         </a>
 
         <!-- Tefal -->
-        <a class="work-page__row-reverse" href="https://shop.tefal.ua/" target="_blank">
+        <a class="work-page__row-reverse" href="/work/tefal" target="_self">
             <div class="row-reverse__img work-page__image">
                 <img loading="lazy" src="{{media url='wysiwyg/work/tefal_banner.png'}}" alt="Tefal online store development" />
             </div>
@@ -88,7 +87,7 @@
         </a>
 
         <!-- Krups -->
-        <a class="work-page__dual-top-reverse" href="https://www.krups.ua/" target="_blank">
+        <a class="work-page__dual-top-reverse" href="/work/krups" target="_self">
             <div class="dual-top-reverse__img work-page__image">
                 <img loading="lazy" src="{{media url='wysiwyg/work/krups_banner.png'}}" alt="Krups online store development" />
             </div>
@@ -98,33 +97,31 @@
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
                 <h5 class="h5">
-                    Krups has been the German expert in coffee and food preparation since 1846. Krups design robust and precise
-                    products that are a pleasure to use, enabling you to achieve the detail that will make all the difference and
-                    delight your loved ones.
+                    Krups is a German kitchen appliance manufacturer known for its coffee makers, espresso machines, and other small household appliances.
                 </h5>
                 <p class="work-page__small-text">Design, development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
         </a>
 
-        <!-- Soundmag -->
-        <a class="work-page__dual-bottom-reverse" href="https://soundmag.ua/" target="_blank">
+        <!-- Gardening Express -->
+        <a class="work-page__dual-bottom-reverse" href="/work/gardening-express" target="_self">
             <div class="dual-bottom-reverse__img work-page__image">
-                <img loading="lazy" src="{{media url='wysiwyg/work/soundmag_banner.png'}}" alt="Soundmag online store development" />
+                <img loading="lazy" src="{{media url='wysiwyg/taisiia-stupak-Kc4go4SRO3s-unsplash_1_min.png'}}" alt="Gardening Express Magento online store development" />
             </div>
             <div class="work-page__info">
                 <h4 class="_h4">
-                    Soundmag
+                    Gardening Express
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5 class="h5">Online store and the first salon of personal audio</h5>
-                <p class="work-page__small-text">Design, development, integrations, support</p>
+                <h5 class="h5">Gardening Express UK is a leading online retailer specializing in plants and garden accessories.</h5>
+                <p class="work-page__small-text">Migration, server optimization, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
         </a>
 
         <!-- WMF -->
-        <a class="work-page__row" href="https://www.wmf.ua/" target="_blank">
+        <a class="work-page__row" href="/work/wmf" target="_self">
             <div class="row__img work-page__image">
                 <img loading="lazy" src="{{media url='wysiwyg/work/wmf_banner.png'}}" alt="WMF online store development" />
             </div>
@@ -136,44 +133,43 @@
                 <h5 class="h5">
                     WMF is your ideal kitchen partner with over 160 years of tradition. Through products designed in Germany
                     boasting top-level functionalities and iconic design, WMF simplify and heighten the best moments in food
-                    preparation, cooking and the sharing of dishes and beverages
+                    preparation, cooking and the sharing of dishes and beverages.
                 </h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
         </a>
 
-        <!-- Rowenta -->
-        <a class="work-page__dual-top" href="https://www.rowenta.ua/" target="_blank">
+        <!-- Aquapolis -->
+        <a class="work-page__dual-top" href="/work/aquapolis" target="_self">
             <div class="dual-top__img work-page__image">
-                <img loading="lazy" src="{{media url='wysiwyg/work/rowenta_banner.png'}}" alt="Rowenta online store development" />
+                <img loading="lazy" src="{{media url='wysiwyg/jamie-street-UnKbcMUjlIw-unsplash_1.png'}}" alt="Aquapolis ecommerce development" />
             </div>
             <div class="work-page__info">
                 <h4 class="_h4">
-                    Rowenta
+                    Aquapolis
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
                 <h5 class="h5">
-                    A German specialist in steam and heat since 1909, Rowenta creates respectful solutions for home and personal
-                    care for the most demanding customers.
+                    Aquapolis.ua is a leading online store specializing in the sale of swimming pools and related equipment.
                 </h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
         </a>
 
-        <!-- Chicco -->
-        <a class="work-page__dual-bottom" href="https://chicco.com.ua/" target="_blank">
+        <!-- A-MANO Capri -->
+        <a class="work-page__dual-bottom" href="/work/amano-capri" target="_self">
             <div class="dual-bottom__img work-page__image">
-                <img loading="lazy" src="{{media url='wysiwyg/work/chicco_banner.png'}}" alt="Chicco ecommerce development" />
+                <img loading="lazy" src="{{media url='wysiwyg/449884590_818868613293894_9126841631906027421_n_1.png'}}" alt="Chicco ecommerce development" />
             </div>
             <div class="work-page__info">
                 <h4 class="_h4">
-                    Chicco
+                    A•MANO Capri
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
                 <h5 class="h5">
-                    Chicco is an Italian manufacturer of children's clothing and toys with retail outlets worldwide
+                    A•MANO Capri is a boutique in Capri, Italy that creates custom-fitted, handmade leather sandals using 3D printing technology.
                 </h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
@@ -181,7 +177,7 @@
         </a>
 
         <!-- GoodWine -->
-        <a class="work-page__row-reverse work-page__last-item" href="https://goodwine.com.ua/" target="_blank">
+        <a class="work-page__row-reverse work-page__last-item" href="/work/goodwine" target="_self">
             <div class="row-reverse__img work-page__image">
                 <img loading="lazy" src="{{media url='wysiwyg/work/full-bottle-wine-with-copy-space_4_.png'}}" alt="ecommerce development for food delivery store" />
             </div>
@@ -191,8 +187,7 @@
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
                 <h5 class="h5">
-                    official online store of the international<br />
-                    brand under which household appliances and dishes are produced
+                    Good Wine is an importer and distributor of wine and strong spirits, founded in 2006. It has a retail network with two stores in Kyiv. The company is known for its organic, natural, and biodynamic products and wines from around the world.
                 </h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
